tests/baselines/reference/indexSignatureMustHaveTypeAnnotation.errors.txt
indexSignatureMustHaveTypeAnnotation.ts(3,6): error TS2304: Cannot find name 'x'.
indexSignatureMustHaveTypeAnnotation.ts(4,5): error TS1021: An index signature must have a type annotation.
indexSignatureMustHaveTypeAnnotation.ts(9,6): error TS2304: Cannot find name 'x'.
indexSignatureMustHaveTypeAnnotation.ts(14,5): error TS1021: An index signature must have a type annotation.


==== indexSignatureMustHaveTypeAnnotation.ts (4 errors) ====
    interface I {
        // Used to be indexer, now it is a computed property
        [x]: string;
         ~
!!! error TS2304: Cannot find name 'x'.
        [x: string];
        ~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }
    
    class C {
        // Used to be indexer, now it is a computed property
        [x]: string
         ~
!!! error TS2304: Cannot find name 'x'.
        
    }
    
    class C2 {
        [x: string]
        ~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }